<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.sjd_utils.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical"
        android:weightSum="1">

        <Button
            android:id="@+id/Button1"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="3dp"
            android:gravity="center"
            android:onClick="onClick"
            android:text="@string/okhttp"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/Button2"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="3dp"
            android:gravity="center"
            android:onClick="onClick"
            android:text="@string/camera"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/Button3"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="3dp"
            android:gravity="center"
            android:onClick="onClick"
            android:text="@string/nfc"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/Button4"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="3dp"
            android:gravity="center"
            android:onClick="onClick"
            android:text="@string/normallistview"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/Button5"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="3dp"
            android:gravity="center"
            android:onClick="onClick"
            android:text="@string/optimizationlistview"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/Button6"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="3dp"
            android:gravity="center"
            android:onClick="onClick"
            android:text="@string/loadlistview"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/Button7"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="3dp"
            android:gravity="center"
            android:onClick="onClick"
            android:text="Button"
            android:textAllCaps="false" />

    </LinearLayout>
</RelativeLayout>
